Java SE 1.4対応